// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VersionCheck alerts with a forced version update 1`] = `<View />`;

exports[`VersionCheck alerts with a forced version update 2`] = `
Array [
  Array [
    "Force title",
    "Force message",
    Array [
      Object {
        "onPress": [Function],
        "text": "Update Now",
      },
    ],
    Object {
      "cancelable": false,
    },
  ],
]
`;

exports[`VersionCheck alerts with a suggested version update 1`] = `<View />`;

exports[`VersionCheck alerts with a suggested version update 2`] = `
Array [
  Array [
    "Suggested update title",
    "Suggested update message",
    Array [
      Object {
        "onPress": [Function],
        "text": "Update Now",
      },
      Object {
        "text": "Cancel",
      },
    ],
    Object {
      "cancelable": false,
    },
  ],
]
`;

exports[`VersionCheck renders as pending by default 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    Loading...
  </Text>
</View>
`;
